added mridul seth as a new speaker, fixed erroneous older texts

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -245,11 +245,11 @@
                                 <p>
                                     {{ _('Building for the modern web is complicated and error-prone: a typical web app '
                                          'requires five different languages and four or five frameworks just to get '
-                                         'started. Wouldn''t it be nicer if we could do it all in Python? With Anvil, '
+                                         'started. Wouldn\'t it be nicer if we could do it all in Python? With Anvil, '
                                          'you can design your page visually, write your browser-side and server-side '
                                          'code in pure Python, and even set up a built-in database in seconds. In this '
                                          'talk, Meredydd will walk us through how Anvil works under the bonnet, and '
-                                         'the challenges of building a programming system that''s easy to use without '
+                                         'the challenges of building a programming system that\'s easy to use without '
                                          'sacrificing power.') }}
                                 </p>
                             </div>
@@ -278,7 +278,7 @@
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
-                                    {{ _('Shaun started programming in earnest by simulating burning fusion plasmas in the world''s biggest laser system. '
+                                    {{ _('Shaun started programming in earnest by simulating burning fusion plasmas in the world\'s biggest laser system. '
                                          'He fell in love with Python as a data analysis tool, and has never looked back. Now he wants to turn everything '
                                          'into Python, which is why he works for Anvil.') }}
                                 </p>
@@ -287,16 +287,16 @@
                                 <h4 class="session-title">{{ _('Anvil - Build a full-stack web app using nothing but Python') }}</h4>
                                 <p>
                                     {{ _('Anvil is a platform for rapidly developing web apps using nothing but Python.\n\n'
-                                         'It''s like Visual Basic for the web. It has a drag-and-drop editor for '
+                                         'It\'s like Visual Basic for the web. It has a drag-and-drop editor for '
                                          'constructing a user interface, controlled by Python code in both the client '
                                          'and a hosted server environment.\n\n'
-                                         'This is an interactive workshop where you''ll be guided through creating an app. '
+                                         'This is an interactive workshop where you\'ll be guided through creating an app. '
                                          'Either:\n'
                                          '* A TODO list - a simple example of a Create, Read, Update, Delete (CRUD) app\n'
                                          '* A weather data dashboard\n'
                                          '* An app that controls a remote machine from the web\n'
                                          '* Any other idea you might have!\n\n'
-                                         'You''ll need a laptop to follow along.\n\n'
+                                         'You\'ll need a laptop to follow along.\n\n'
                                          'For a preview, have a look at this short video https://anvil.works/#about') }}
                                 </p>
                             </div>
@@ -567,7 +567,7 @@
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
-                                <h4 class="session-title">{{ _('I Don''t Care About Security (And Neither Should You)') }}</h4>
+                                <h4 class="session-title">{{ _('I Don\'t Care About Security (And Neither Should You)') }}</h4>
                                 <p> {{ _('Remember when setting up a login page was easy? It seems like nowadays it can '
                                          'take weeks to start a project--creating a signup form, a login form, a '
                                          'password recovery screen, and all the validation in between. And you haven’t '
@@ -727,6 +727,56 @@
                     </div><!-- Col end -->
                 </div><!-- Speaker list 15 end -->
             </div><!-- Speaker row 15 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/seth.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Mridul Seth</h3>
+                            <p class="ts-speaker-designation">{{ _('Python loving research assistant') }}</p>
+                            <ul class="ts-speaker-social-links">
+                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>
+{#                                <li><a href="https://twitter.com/webKnjaZ"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+                                <li><a href="https://www.linkedin.com/in/mridulseth/"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Mridul is trying to understand the world around us using data and tools '
+                                         'from network science, currently at UCLouvain. He is an open source '
+                                         'enthusiast and has been involved with Google Summer of Code and NumFOCUS. '
+                                         'He has given multiple tutorials at PyCon, PyData, and EuroScipy to share '
+                                         'his love of Python and network science.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Network Science, Game of Thrones and US Airports') }}</h4>
+                                <p> {{ _('This tutorial will introduce the basics of network theory and working '
+                                         'with graphs/networks using python and the NetworkX package. This will be '
+                                         'a hands on tutorial and will require writing a lot of code snippets. The '
+                                         'participants should be comfortable with basic python (loops, dictionaries, '
+                                         'lists) and some(minimal) experience with working inside a jupyter notebook. '
+                                         'Broadly the tutorial is divided into three parts:') }} </p>
+                                <p>
+                                    <ul>
+                                        <li> {{ _('Part A (20 mins) - Basics of graph theory, NetworkX and various examples of networks in real life.') }} </li>
+                                        <li> {{ _('Part B (35 mins) - Study the Game of Thrones network and find important characters and communities in the network.') }} </li>
+                                        <li> {{ _('Part C (35 mins) - Analyze the structure of the US Airport dataset and look at the temporal evolution of the network from 1990 to 2015.') }} </li>
+                                        <li> {{ _('By the end of the tutorial everyone should be comfortable with hacking on the NetworkX API, modelling data as networks and basic analysis on networks using python.') }} </li>
+                                    </ul>
+                                </p>
+                                <p> {{ _('The tutorial and the datasets is available on GitHub at: https://github.com/MridulS/pydata-networkx') }}
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 16 end -->
+            </div><!-- Speaker row 16 -->
 
 
         </div>
