--- a/templates/index.html
+++ b/templates/index.html
@@ -509,17 +509,17 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpeg') }}"#}
-{#                             alt="Jakub Šedinár">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name">Jakub Šedinár</h3>#}
-{#                            <p class="ts-speaker-designation">{{ _('Odoo evangelist') }}</p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 3 end -->#}
-{#            </div><!-- Content row 6 end -->#}
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/seth.jpg') }}"
+                             alt="Mridul Seth">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Mridul Seth</h3>
+                            <p class="ts-speaker-designation">{{ _('Python loving research assistant') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 6 end -->
 
         </div><!--/ Container end -->
     </section>
