added jetbrains and itc nexteria to sponsors

--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -111,6 +111,22 @@
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
         </div><!-- Col 1 end -->
+
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/jetbrains.svg') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Jet Brains</h4>
+              <p>{{ _('At JetBrains, code is our passion. For over 15 years we have strived to make the strongest, most effective developer tools on earth. By automating routine checks and corrections, our tools speed up production, freeing developers to grow, discover and create.') }}</p>
+              <div class="sponsor-web-link">
+                <a href="https://www.jetbrains.com/?utm_source=sponsorship&utm_medium=referral&utm_campaign=PyConSK" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/JetBrains?utm_source=sponsorship&utm_medium=referral&utm_campaign=PyConSK" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/jetbrains?utm_source=sponsorship&utm_medium=referral&utm_campaign=PyConSK" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/company/jetbrains/?utm_source=sponsorship&utm_medium=referral&utm_campaign=PyConSK" target="_blank"><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 2 end -->
       </div>
 
       <div class="row text-center">
@@ -178,7 +194,7 @@
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
-        </div><!-- Col 1 end -->
+        </div><!-- Col 2 end -->
 
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
@@ -196,7 +212,25 @@
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
-        </div><!-- Col 1 end -->
+        </div><!-- Col 3 end -->
+
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/itclub.png') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Nexteria IT Club</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+{#                <a href="https://www.sli.do/" target="_blank"><i class="fa fa-globe"></i></a>#}
+                <a href="https://www.facebook.com/nexteria.itclub/" target="_blank"><i class="fa fa-facebook"></i></a>
+{#                <a href="https://twitter.com/slidoapp" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="https://www.linkedin.com/company/sli-do" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+{#                <a href="https://www.instagram.com/slidoapp/" target="_blank"><i class="fa fa-instagram"></i></a>#}
+{#                <a href="https://www.youtube.com/user/slidoapp" target="_blank"><i class="fa fa-youtube"></i></a>#}
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 4 end -->
       </div>
 
     </div>
