Add link to twitter for Mridul

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -742,7 +742,8 @@
                             <p class="ts-speaker-designation">{{ _('Python loving research assistant') }}</p>
                             <ul class="ts-speaker-social-links">
                                 <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>
-{#                                <li><a href="https://twitter.com/webKnjaZ"><i class="fa fa-twitter"></i></a></li>#}
+                                <li><a href="https://twitter.com/Mridul_Seth"><i class="fa fa-twitter"></i></a></li>
+
 {#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
                                 <li><a href="https://www.linkedin.com/in/mridulseth/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
