added new speakers" barra, cimpersak, torres

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -778,6 +778,169 @@
                 </div><!-- Speaker list 16 end -->
             </div><!-- Speaker row 16 -->
 
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Christian Barra</h3>
+                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>#}
+                                <li><a href="https://www.chrisbarra.xyz/"><i class="fa fa-globe"></i></a></li>
+                                <li><a href="https://twitter.com/christianbarra"><i class="fa fa-twitter"></i></a></li>
+{#                                <li><a href="https://www.linkedin.com/in/mridulseth/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Software Designer, PyCon DE organizer, Python Software Foundation Fellow') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Let\'s talk about MLOps') }}</h4>
+                                <p> {{ _('The quantity of hype around machine learning and AI is probably second only '
+                                         'to bitcoins and blockchains. But until a machine learning model is deployed '
+                                         'to production the value delivered to companies is approximately equal to '
+                                         'zero. Together with the common mantra that data science can\'t use '
+                                         'agile/lean frameworks or that the best software engineering practises '
+                                         'don\'t apply explains a lot about why often companies got burnt with '
+                                         'their data science projects and why generally they under delivered.') }}</p>
+                                <p> {{ _('MLOps is here to help, the machine-learning equivalent of DevOps: it '
+                                         'solves the problems of implementing machine-learning in production. '
+                                         'During this talk I will introduce the data science lifecycle, the '
+                                         'concept of machine learning Ops, its characteristics, why is extremely '
+                                         'required, how it compares to DevOps, how it will become a required '
+                                         'capabilities for any DS/ML/AI Team, tools available and how you can '
+                                         'start with it.') }} </p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 17 end -->
+            </div><!-- Speaker row 17 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/cimpersak.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Mislav Cimperšak</h3>
+                            <p class="ts-speaker-designation">{{ _('Web developer, DevOps, manager') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>#}
+                                <li><a href="https://twitter.com/mislavcimpersak"><i class="fa fa-twitter"></i></a></li>
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in/mridulseth/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Remote/on-site/anything in between web developer with ~10 and Team Lead '
+                                         'with ~3 years of experience. Responsible for everything from software '
+                                         'architecture, team management, project planning, mentoring to straight '
+                                         'down programming. In the last few years, I\'m rediscovering my love for '
+                                         'DevOps and finding a new mistress called *People management*.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('On the Edge of Leadership') }}</h4>
+                                <p> {{ _('How to lead a dev team with zero personal experience in people '
+                                         'management while still having no idea how to manage even your own time. '
+                                         'After several years of fairly regular software developer career path, '
+                                         'I\'ve found myself in a new role that I\'ve unconsciously put myself '
+                                         'into. Being a solid senior developer, management at the time agreed '
+                                         'that I am a good candidate for the team lead. Being promoted to a new '
+                                         'personal level of incompetence I felt lost and confused in my new role, '
+                                         'but made a pact with myself to see this one through to the end. And so '
+                                         'it came that for the past few years, I\'ve been development team lead '
+                                         'for several teams.') }}</p>
+                                <p> {{ _('With zero formal training, relying on my intuition and various random '
+                                         'pieces of advice I picked up from people smarter than me I\'ve more or '
+                                         'less successfully lead my teams to their goals. On that path, I\'ve '
+                                         'learned tremendously, improved myself and hopefully, my teams. I would '
+                                         'like to share what worked and what didn\'t, my emotions, my regrets, '
+                                         'and my wins.') }} </p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 18 end -->
+            </div><!-- Speaker row 18 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Jorge Torres</h3>
+                            <p class="ts-speaker-designation">{{ _('Machine learning engineer') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/webKnjaZ"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+                                <li><a href="https://www.linkedin.com/in/torresjorge/"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Jorge Torres Is currently Co-founder & CTO of MindsDB and a visiting '
+                                         'scholar at UC Berkeley researching machine learning automation and '
+                                         'explainability. He has worked for a number of data-intensive start-ups, '
+                                         'most recently working with Aneesh Chopra (the first CTO in the US '
+                                         'government) building data systems that analyze billions of patients '
+                                         'records and lead to highest savings for millions of patients, he '
+                                         'started his work on scaling solutions using machine learning in early '
+                                         '2008 while working as first full time engineer at Couchsurfing where he '
+                                         'helped grow the company from a few thousand users to a few million. '
+                                         'Jorge had degrees in electrical engineering & computer science, '
+                                         'including a masters degree in computer systems (with a focus on applied '
+                                         'Machine Learning) from the Australian National University.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Machine Learning Democratization') }}</h4>
+                                <p> {{ _('We can\'t expect Machine Learning experts to be both domain experts '
+                                         'across various fields and also true experts in ML, it is crucial to '
+                                         'rethink how we build tools so that we can provide Machine Learning '
+                                         'capabilities to experts in various disciplines that are not necessarily '
+                                         'savvy in machine learning, but are experts in their own domains, so that '
+                                         'they can too become participants of the data science community.') }} </p>
+                                <p> {{ _('This talk is divided into three sections:') }}</p>
+                                <p> {{ _('The first one, dives into the importance of democratizing Machine Learning, '
+                                         'its objective is to demonstrate why now this is a crucial issue to be '
+                                         'solved and to show the risks and problems that present themselves when '
+                                         'Machine Learning Engineers take in the responsibility of building '
+                                         'predictive technologies in domains that are not necessarily where they '
+                                         'are the most experts on.') }}</p>
+                                <p> {{ _('The second part of this talk focuses on some solutions and approaches '
+                                         'to challenges of democratizing Machine Learning, as well as the journey '
+                                         'and results we have seen at MindsDB while at this endeavor as well as '
+                                         'what would be new ways that the ML community can think of the next '
+                                         'generation of tools being built.') }}</p>
+                                <p> {{ _('The third and most extensive section of this talk, focuses on the new '
+                                         'issues that are born once machine Learning capabilities are on the hands '
+                                         'of not ML experts, more importantly, the implications of delegating the '
+                                         'Machine Learning machinery to a system, and what is important in order '
+                                         'to trust those systems. Which leads to the importance in further '
+                                         'developing our understanding of explainability, interpretability, and '
+                                         'robustness of ML.') }}</p>
+
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 19 end -->
+            </div><!-- Speaker row 19 -->
 
         </div>
     </section>
