temporary removed photo of jorge torres

--- a/templates/index.html
+++ b/templates/index.html
@@ -544,8 +544,9 @@
                 </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}"
-                             alt="Jorge Torres">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"/>
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}"#}
+{#                             alt="Jorge Torres">#}
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Jorge Torres</h3>
                             <p class="ts-speaker-designation">{{ _('Machine learning engineer') }}</p>
