--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -879,7 +879,8 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
-                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}" />
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"/>
+{#                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}" />#}
                         </div><!--Image end -->
                     </div><!-- Col end -->
 
