--- a/templates/index.html
+++ b/templates/index.html
@@ -425,6 +425,16 @@
             <div class="row"><!-- row 4 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sojakova.jpg') }}"
+                             alt="Stanislava Sojáková">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Stanislava Sojáková</h3>
+                            <p class="ts-speaker-designation">{{ _('Independent contractor and tester of edu app') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dygalo.jpg') }}"
                              alt="Dmitry Dygalo">
                         <div class="ts-speaker-info">
@@ -443,6 +453,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 4 end -->
+
+            <div class="row"><!-- row 5 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedivy.jpg') }}"
@@ -453,9 +466,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 4 end -->
-
-            <div class="row"><!-- row 5 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/pandey.jpg') }}"
@@ -476,6 +486,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 5 end -->
+
+            <div class="row"><!-- row 6 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sedinar.jpeg') }}"
@@ -486,9 +499,16 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 5 end -->
-
-            <div class="row"><!-- row 6 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dzurovcinova.jpg') }}"
+                             alt="Petra Dzurovcinova">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Petra Dzurovcinova</h3>
+                            <p class="ts-speaker-designation">{{ _('Chief Innovation Officer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpeg') }}"
@@ -499,6 +519,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
+            </div><!-- Content row 6 end -->
+
+            <div class="row"><!-- row 7 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sydorenko.jpg') }}"
@@ -518,20 +541,29 @@
                             <p class="ts-speaker-designation">{{ _('Python loving research assistant') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 6 end -->
-
-            <div class="row"><!-- row 7 start-->
+                </div><!-- Speaker Col 1 end -->
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}"#}
+{#                             alt="Christian Barra">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name">Christian Barra</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 1 end -->#}
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}"
-                             alt="Christian Barra">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"
+                             alt="Placeholder">
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name">Christian Barra</h3>
-                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>
+                            <h3 class="ts-speaker-name"></h3>
+                            <p class="ts-speaker-designation"></p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
+            </div>
+            <div class="row"><!-- row 7 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/cimpersak.jpg') }}"
@@ -550,6 +582,17 @@
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Jorge Torres</h3>
                             <p class="ts-speaker-designation">{{ _('Machine learning engineer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hrabinova.jpg') }}"/>
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}"#}
+{#                             alt="Jorge Torres">#}
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Světlana Hrabinová</h3>
+                            <p class="ts-speaker-designation">{{ _('UX designer and marketing specialist') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
