--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -348,6 +348,53 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sojakova.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Stanislava Sojáková</h3>
+                            <p class="ts-speaker-designation">{{ _('Independent contractor and tester of edu app') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/joel__lord"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+                                <li><a href="https://www.linkedin.com/in/stanislava-sojakova-a528ab79/"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('My passion is uncovering the hidden and igniting the excitement for that '
+                                         'in others, especially in the field of problem-solving.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Lessons Learned from Leading Bratislava Peer Python Learning Group') }}</h4>
+                                <p> {{ _('On Jan 26th, the first meetup of the Bratislava Peer Python Learning Group '
+                                         'series took place, and it was a blast. Do not take my word for it, read '
+                                         'what attendees had to say: “At home, I go on Facebook or to the fridge. '
+                                         'Here, it is a study atmosphere, and I am pulled to learn.” “There are '
+                                         'people here, who explain to me where I went wrong. I would be frustrated '
+                                         'and give up without them.” “I am looking forward to those Saturday '
+                                         'community meetings.”') }}</p>
+                                <p> {{ _('There is some magic going on in the Python Meetups the attendee statements '
+                                         'of which you could read above. I give you a glimpse of why we at '
+                                         'Progressbar founded the group, how the model of blended learning works, '
+                                         'and what benefits had participants felt from stretching their computational '
+                                         'thinking muscles. I will talk about the peer and community aspect of the '
+                                         'course and describe the composition of the group. Finally, I outline the '
+                                         'vision for these groups and give some tips for organizing such a group.') }}</p>
+
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 8 end -->
+            </div><!-- Speaker row 8 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
                             <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dygalo.jpg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
@@ -384,8 +431,8 @@
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
-                </div><!-- Speaker list 8 end -->
-            </div><!-- Speaker row 8 -->
+                </div><!-- Speaker list 9 end -->
+            </div><!-- Speaker row 9 -->
 
             <div class="row">
                 <div class="ts-speaker-list clearfix">
@@ -632,6 +679,47 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dzurovcinova.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Petra Dzurovcinova</h3>
+                            <p class="ts-speaker-designation">{{ _('Chief Innovation Officer') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/mislavcimpersak"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+                                <li><a href="https://www.linkedin.com/in/petradzurovcinova/"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p> {{ _('Petra decided to try to work for self governance. She works as Chief '
+                                         'Innovation Officer in City of Bratislava.') }} </p>
+                                <p> {{ _('Petra participated on foundation of SAPIE - Slovak Alliance for Innovative '
+                                         'Economics. It was the key agent of tech firms from Slovakia and abroad '
+                                         'with more than 80 members. In SAPIE, she co-authored expert documents '
+                                         'about startup ecosystem, analysis and ways of support of rapidly growing '
+                                         'companies and ways of effective implementation of Single Digital Market '
+                                         'in EU and Slovakia. After graduation she has worked for three years in '
+                                         'Royal Institution of Australia, where she presented scientific and '
+                                         'technology knowledge to the public. During her career she has experienced '
+                                         'startup world in Freya project. She is a co-author of entrepreneurship '
+                                         'and innovations of Plan Bratislava.') }} </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Inovácie v meste Bratislava') }}</h4>
+                                <p> {{ _('Čo všetko robíme v Bratislave pre inovácie a ako môžete byť súčasťou tohto procesu?') }}</p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 18 end -->
+            </div><!-- Speaker row 18 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
                             <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/mertus.jpeg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
@@ -779,50 +867,50 @@
                 </div><!-- Speaker list 16 end -->
             </div><!-- Speaker row 16 -->
 
-            <div class="row">
-                <div class="ts-speaker-list clearfix">
-                    <div class="col-xs-12 col-md-4">
-                        <div class="ts-speaker-image">
-                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}" />
-                        </div><!--Image end -->
-                    </div><!-- Col end -->
-
-                    <div class="col-xs-12 col-md-8">
-                        <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name dark">Christian Barra</h3>
-                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>
-                            <ul class="ts-speaker-social-links">
+{#            <div class="row">#}
+{#                <div class="ts-speaker-list clearfix">#}
+{#                    <div class="col-xs-12 col-md-4">#}
+{#                        <div class="ts-speaker-image">#}
+{#                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}" />#}
+{#                        </div><!--Image end -->#}
+{#                    </div><!-- Col end -->#}
+{##}
+{#                    <div class="col-xs-12 col-md-8">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name dark">Christian Barra</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>#}
+{#                            <ul class="ts-speaker-social-links">#}
 {#                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>#}
-                                <li><a href="https://www.chrisbarra.xyz/"><i class="fa fa-globe"></i></a></li>
-                                <li><a href="https://twitter.com/christianbarra"><i class="fa fa-twitter"></i></a></li>
+{#                                <li><a href="https://www.chrisbarra.xyz/"><i class="fa fa-globe"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/christianbarra"><i class="fa fa-twitter"></i></a></li>#}
 {#                                <li><a href="https://www.linkedin.com/in/mridulseth/"><i class="fa fa-linkedin"></i></a></li>#}
-                            </ul>
-                            <div class="ts-speaker-bio">
-                                <p>
-                                    {{ _('Software Designer, PyCon DE organizer, Python Software Foundation Fellow') }}
-                                </p>
-                            </div>
-                            <div class="ts-speaker-session">
-                                <h4 class="session-title">{{ _('Let\'s talk about MLOps') }}</h4>
-                                <p> {{ _('The quantity of hype around machine learning and AI is probably second only '
-                                         'to bitcoins and blockchains. But until a machine learning model is deployed '
-                                         'to production the value delivered to companies is approximately equal to '
-                                         'zero. Together with the common mantra that data science can\'t use '
-                                         'agile/lean frameworks or that the best software engineering practises '
-                                         'don\'t apply explains a lot about why often companies got burnt with '
-                                         'their data science projects and why generally they under delivered.') }}</p>
-                                <p> {{ _('MLOps is here to help, the machine-learning equivalent of DevOps: it '
-                                         'solves the problems of implementing machine-learning in production. '
-                                         'During this talk I will introduce the data science lifecycle, the '
-                                         'concept of machine learning Ops, its characteristics, why is extremely '
-                                         'required, how it compares to DevOps, how it will become a required '
-                                         'capabilities for any DS/ML/AI Team, tools available and how you can '
-                                         'start with it.') }} </p>
-                            </div>
-                        </div><!-- Info end -->
-                    </div><!-- Col end -->
-                </div><!-- Speaker list 17 end -->
-            </div><!-- Speaker row 17 -->
+{#                            </ul>#}
+{#                            <div class="ts-speaker-bio">#}
+{#                                <p>#}
+{#                                    {{ _('Software Designer, PyCon DE organizer, Python Software Foundation Fellow') }}#}
+{#                                </p>#}
+{#                            </div>#}
+{#                            <div class="ts-speaker-session">#}
+{#                                <h4 class="session-title">{{ _('Let\'s talk about MLOps') }}</h4>#}
+{#                                <p> {{ _('The quantity of hype around machine learning and AI is probably second only '#}
+{#                                         'to bitcoins and blockchains. But until a machine learning model is deployed '#}
+{#                                         'to production the value delivered to companies is approximately equal to '#}
+{#                                         'zero. Together with the common mantra that data science can\'t use '#}
+{#                                         'agile/lean frameworks or that the best software engineering practises '#}
+{#                                         'don\'t apply explains a lot about why often companies got burnt with '#}
+{#                                         'their data science projects and why generally they under delivered.') }}</p>#}
+{#                                <p> {{ _('MLOps is here to help, the machine-learning equivalent of DevOps: it '#}
+{#                                         'solves the problems of implementing machine-learning in production. '#}
+{#                                         'During this talk I will introduce the data science lifecycle, the '#}
+{#                                         'concept of machine learning Ops, its characteristics, why is extremely '#}
+{#                                         'required, how it compares to DevOps, how it will become a required '#}
+{#                                         'capabilities for any DS/ML/AI Team, tools available and how you can '#}
+{#                                         'start with it.') }} </p>#}
+{#                            </div>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Col end -->#}
+{#                </div><!-- Speaker list 17 end -->#}
+{#            </div><!-- Speaker row 17 -->#}
 
             <div class="row">
                 <div class="ts-speaker-list clearfix">
@@ -943,6 +1031,50 @@
                     </div><!-- Col end -->
                 </div><!-- Speaker list 19 end -->
             </div><!-- Speaker row 19 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hrabinova.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Světlana Hrabinová</h3>
+                            <p class="ts-speaker-designation">{{ _('UX designer and marketing specialist') }}</p>
+                            <ul class="ts-speaker-social-links">
+{#                                <li><a href="https://mriduls.github.io/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/mislavcimpersak"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+                                <li><a href="https://www.linkedin.com/in/svetlanahrabinova/"><i class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Světlana works as a UX designer and marketing specialist in the library '
+                                         'of Tomas Bata University in Zlin. She holds PhD. from Library and Information '
+                                         'Science from Comenius University Bratislava, her dissertation tested '
+                                         'usability of mobile web sites of libraries. Her responsibilities in '
+                                         'university library (besides various marketing activities) are design, '
+                                         'creation and overall improvement of user interface in library\'s systems '
+                                         'and services.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('Nenuťte uživatele přemýšlet') }}</h4>
+                                <p> {{ _('Myšlenka Steva Kruga "Nenuťte uživatele přemýšlet" bude hlavní inspirací '
+                                         'pro příspěvek, který se bude věnovat pojmům jako je UX (user experience), '
+                                         'UI (user interface) a použitelnost. Smyslem je poukázat na základní '
+                                         'principy použitelnosti a návrhu uživatelského prožitku, které pomohou '
+                                         'navrhovat a vytvářet intuitivní a pochopitelné služby či uživatelská '
+                                         'rozhraní s cílem jít svým uživatelům naproti, tedy aby uživatelé museli '
+                                         'dělat pouze nezbytné kroky s vynaložením co nejmenšího úsilí.') }}</p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 18 end -->
+            </div><!-- Speaker row 18 -->
 
         </div>
     </section>
