Minor updates in speakers

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -644,7 +644,7 @@
                     <div class="col-xs-12 col-md-8">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name dark">Jakub Šedinár</h3>
-                            <p class="ts-speaker-designation">{{ _('Odoo evangelist') }}</p>
+                            <p class="ts-speaker-designation">{{ _('Odoo evangelist in IMPLEMENTO') }}</p>
                             <ul class="ts-speaker-social-links">
 {#                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>#}
 {#                                <li><a href="https://twitter.com/joel__lord"><i class="fa fa-twitter"></i></a></li>#}
