--- a/templates/index.html
+++ b/templates/index.html
@@ -630,15 +630,32 @@
                 </div><!-- Speaker Col 3 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/wirtel.jpg') }}"
                              alt="Placeholder"/>
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name"></h3>
-                            <p class="ts-speaker-designation"></p>
+                            <h3 class="ts-speaker-name">Stéphane Wirtel</h3>
+                            <p class="ts-speaker-designation">{{ _('Contributor of CPython, #fellow member of the PSF, '
+                                                                   'EuroPython, AFPy and freelancer.') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
             </div><!-- Content row 9 end -->
+
+
+{#            <div class="row"><!-- row 9 start-->#}
+{#            #}
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"#}
+{#                             alt="Placeholder">#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name"></h3>#}
+{#                            <p class="ts-speaker-designation"></p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 1 end -->#}
+{#                #}
+{#            </div>#}
 
         </div><!--/ Container end -->
     </section>
