--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -221,6 +221,46 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/wirtel.jpg') }}" />
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-8">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">Stéphane Wirtel</h3>
+                            <p class="ts-speaker-designation">{{ _('Contributor of CPython, #fellow member of the PSF, '
+                                                                   'EuroPython, AFPy and freelancer.') }}</p>
+                            <ul class="ts-speaker-social-links">
+                                <li><a href="https://github.com/matrixise"><i class="fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/matrixise"><i class="fa fa-twitter"></i></a></li>
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in/mridulseth/"><i class="fa fa-linkedin"></i></a></li>#}
+                            </ul>
+                            <div class="ts-speaker-bio">
+                                <p>
+                                    {{ _('Contributor of CPython, Stephane is a member of the EuroPython team since '
+                                         '2015, he likes to improve his skills with best practices, TDD, CI, etc... '
+                                         'Python developer since 2001 and #fellow member of the PSF, EuroPython and '
+                                         'AFPy, he is also a freelancer in the wonderful Python world.') }}
+                                </p>
+                            </div>
+                            <div class="ts-speaker-session">
+                                <h4 class="session-title">{{ _('What\'s new in Python 3.7?') }}</h4>
+                                <p> {{ _('Scheduled for release in mid-June before the conference, '
+                                         'Python 3.7 is shaping up to be a feature-packed release! This talk will '
+                                         'cover all the new features of Python 3.7, including the Data Classes and '
+                                         'the Context Variables for the asynchronous programming with asyncio.') }}
+                                </p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 18 end -->
+            </div><!-- Speaker row 18 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-4">
+                        <div class="ts-speaker-image">
                             <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/luff.jpg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
