--- a/templates/index.html
+++ b/templates/index.html
@@ -630,15 +630,61 @@
                 </div><!-- Speaker Col 3 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"
-                             alt="Placeholder"/>
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kokula.png') }}"
+                             alt="Radoslav Kokuľa"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Radoslav Kokuľa</h3>
+                            <p class="ts-speaker-designation">{{ _('Test Lead') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 9 end -->
+
+            <div class="row"><!-- row 10 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/fessl.jpg') }}"
+                             alt="Hans Christian Feßl"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Hans Christian Feßl</h3>
+                            <p class="ts-speaker-designation">{{ _('Applications and database manager') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceras.jpg') }}"
+                             alt="Anton Caceras"/>
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name"></h3>
-                            <p class="ts-speaker-designation"></p>
+                            <p class="ts-speaker-designation">{{ _('Software developer and PyCon organizer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
-            </div><!-- Content row 9 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/tibarewala.jpg') }}"
+                             alt="Suryansh Tibarewala"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Suryansh Tibarewala</h3>
+                            <p class="ts-speaker-designation">{{ _('Python developer at booking.com') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 10 end -->
+
+            <div class="row"><!-- row 11 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sika.jpg') }}"
+                             alt="Ondrej Sika"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name"></h3>
+                            <p class="ts-speaker-designation">{{ _('Python & DevOps Engineer from Prague') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+            </div><!-- Content row 11 end -->
 
         </div><!--/ Container end -->
     </section>
