updated social links and magically transformed placeholder to s.wirtel

--- a/templates/index.html
+++ b/templates/index.html
@@ -631,7 +631,7 @@
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/wirtel.jpg') }}"
-                             alt="Placeholder"/>
+                             alt="Stéphane Wirtel"/>
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Stéphane Wirtel</h3>
                             <p class="ts-speaker-designation">{{ _('Contributor of CPython, #fellow member of the PSF, '
