--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -1361,10 +1361,10 @@
                             <h3 class="ts-speaker-name dark">Anton Caceras</h3>
                             <p class="ts-speaker-designation">{{ _('Software developer and PyCon organizer') }}</p>
                             <ul class="ts-speaker-social-links">
+                                <li><a href="https://caceres.me/"><i class="fa fa-globe"></i></a></li>
 {#                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>#}
-{#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
-{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
-{#                                <li><a href="https://www.linkedin.com/in//"><i class="fa fa-linkedin"></i></a></li>#}
+                                <li><a href="https://twitter.com/anton_caceres"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/antoncaceres/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
@@ -1401,10 +1401,10 @@
                             <h3 class="ts-speaker-name dark">Suryansh Tibarewala</h3>
                             <p class="ts-speaker-designation">{{ _('Python developer at booking.com') }}</p>
                             <ul class="ts-speaker-social-links">
-                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>
-                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in//"><i class="fa fa-linkedin"></i></a></li>
+{#                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>#}
+{#                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>#}
+{#                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>#}
+{#                                <li><a href="https://www.linkedin.com/in//"><i class="fa fa-linkedin"></i></a></li>#}
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
@@ -1446,10 +1446,10 @@
                             <h3 class="ts-speaker-name dark">Ondrej Sika</h3>
                             <p class="ts-speaker-designation">{{ _('Python & DevOps Engineer form Prague') }}</p>
                             <ul class="ts-speaker-social-links">
-                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>
-                                <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in//"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://ondrej-sika.com/"><i class="fa fa-globe"></i></a></li>
+{#                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>#}
+                                <li><a href="https://twitter.com/ondrejsika"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/ondrejsika/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
