--- a/templates/index.html
+++ b/templates/index.html
@@ -214,6 +214,21 @@
             <div class="row">
                 <div class="col-md-12 text-left">
                     <div class="card">
+                        <h5 class="card-header">21.02.2019 - {{ _('PyCon SK 2019 under the patronage of the president of the Slovak Republic.') }}
+                        </h5>
+                        <div class="card-body">
+                            <p>
+                                {{ _('We are excited that for the fourth time in the row, PyCon SK will be held under the auspices of the president of the Slovak Republic.') }}
+                                {{ _('We are committed to bring you another conference of excellent quality which will represent the Slovak Republic in dignity before audiences from all over Europe and the rest of the world.') }}
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 text-left">
+                    <div class="card">
                         <h5 class="card-header">15.02.2019 - {{ _('The Call For Proposals is closed!') }}
                         </h5>
                         <div class="card-body">
